--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,6 +13,8 @@
 @import "login";
 @import "register";
 @import "map/map";
+@import "provider/new";
 @import "overrides/scroll";
 @import "overrides/bar-header";
-@import "directives/back-button"
+@import "directives/back-button";
+@import "directives/show-error.scss";
