--- a/app/templates/login/login.jade
+++ b/app/templates/login/login.jade
@@ -5,7 +5,7 @@ ion-view(
   ion-content
     back-button
     .row
-      .logo
+      .moviggo-logo
     .row
       form.form-container(ng-submit='loginVm.login()')
         .list
