--- a/app/templates/prelogin/prelogin.jade
+++ b/app/templates/prelogin/prelogin.jade
@@ -4,7 +4,7 @@ ion-view(
 )
   ion-content
     .row
-      .logo
+      .moviggo-logo
     .row.form-container
       .button.facebook-login(ng-click="preVm.loginWithFB()")
         span.fb-left-icon
