Categories index styles (#41)

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,3 +18,4 @@
 @import "overrides/bar-header";
 @import "directives/back-button";
 @import "directives/show-error.scss";
+@import "categories/index"
