Add constants. Move successState to constants (#42)

--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -10,7 +10,7 @@ ion-side-menus(enable-menu-with-back-views='false')
       h1.title Left
     ion-content
       ion-list
-        ion-item(menu-close='' ui-sref='app.category')
+        ion-item(menu-close='' ui-sref='app.categories.index')
           | {{::("menu.category"|translate)}}
         ion-item(menu-close='' ui-sref='app.map')
           | {{::("menu.location"|translate)}}
