--- a/app/styles/overrides/bar-header.scss
+++ b/app/styles/overrides/bar-header.scss
@@ -11,10 +11,12 @@
   background: $base-yellow;
 
   .title-image {
-    background-image: url('../images/logo-blanco.png');
-    height: 100%;
+    height: 35px;
+    margin-top: 5px;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    background-image: url('../images/logo-blanco.png');
   }
 
   .ion-navicon {
