--- a/app/styles/overrides/bar-header.scss
+++ b/app/styles/overrides/bar-header.scss
@@ -10,7 +10,7 @@
 .bar-stable.bar.bar-header {
   background: $base-yellow;
 
-  .title-image {
+  .alt-logo {
     height: 35px;
     margin-top: 5px;
     background-size: contain;
