--- a/app/templates/category/category.jade
+++ b/app/templates/category/category.jade
@@ -1,5 +1,5 @@
 ion-view(
-  view-title='<div class="title-image"/>'
+  view-title='<div class="alt-logo"></div>'
 )
   ion-content
     .grid-parent
