Manage items from providers (#40)
* Rebase feature-manage-items-from-provider to master

* JSHint correction

* Refactored code

* Code refactoring

* Code refactoring

* Code refactoring

* Changing styles
* Changing names of variables and functions

* Code refactoring

--- a/app/styles/common/inputs.scss
+++ b/app/styles/common/inputs.scss
@@ -3,7 +3,8 @@ input {
 
   &[type=text],
   &[type=password],
-  &[type=email] {
+  &[type=email],
+  &[type=number] {
     padding-left: 40px;
   }
 }
