--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,7 @@
 @import "common/buttons";
 @import "common/bar-footer";
 @import "common/input_icons";
+@import "common/grid";
 
 @import "intro";
 @import "login";
@@ -17,5 +18,6 @@
 @import "overrides/scroll";
 @import "overrides/bar-header";
 @import "directives/back-button";
-@import "directives/show-error.scss";
-@import "categories/index"
+@import "directives/show-error";
+@import "categories/index";
+@import "item/item";
