--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -12,6 +12,8 @@ ion-side-menus(enable-menu-with-back-views='false')
       ion-list
         ion-item(menu-close='' ui-sref='app.categories.index')
           | {{::("menu.category"|translate)}}
+        ion-item(menu-close='' ui-sref='app.items.index')
+          | {{::("item.items"|translate)}}
         ion-item(menu-close='' ui-sref='app.map')
           | {{::("menu.location"|translate)}}
         ion-item(menu-close='' ui-sref='app.provider.welcome')
