lista de proveedores en la vista de categoría

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,4 +20,5 @@
 @import "directives/back-button";
 @import "directives/show-error";
 @import "categories/index";
+@import "categories/show";
 @import "item/item";
