--- a/app/templates/category/index.jade
+++ b/app/templates/category/index.jade
@@ -1,6 +1,8 @@
 ion-view(
-  view-title='<div class="alt-logo"></div>'
+  view-title='{{::("menu.category"|translate)}}'
 )
+  ion-nav-title
+    .alt-logo
   ion-content
     .grid-parent
       a.grid-content(ng-repeat="category in categoryVm.categories" 
