enhance precio input
add ng-upload

Move logic to service

fix param name

--- a/app/templates/item/items.jade
+++ b/app/templates/item/items.jade
@@ -10,7 +10,7 @@ ion-view(
     .row.col.col-offset-5.col-90.col-offset-5
       .list
         a(ng-repeat='item in itemsVm.items', class='item item-avatar' ng-click='itemsVm.showActionSheet(item)')
-          img(class='item-square-img', src='{{item.imagen}}')
+          img(class='item-square-img', ng-src='{{item.imagenes[0].imagen_url}}')
           h2 {{ item.titulo }}
           p {{ item.descripcion }}
     script(id='my-modal-item.html', type='text/ng-template')
