--- a/app/templates/provider/welcome.jade
+++ b/app/templates/provider/welcome.jade
@@ -1,12 +1,12 @@
 ion-view
-  ion-content
-  .row
-    .moviggo-logo
-  .row
-    .list.common-text
-      h1 Conviértete en proveedor
-      p Con moviggo puedes enviar productos y convertirte en proveedor
+  ion-content.pre-application-form
+    .row
+      .moviggo-logo-2.branding-logo
+    .row
+      .list.common-text
+        h1.title Conviértete en proveedor
+        p Con moviggo puedes enviar productos y convertirte en proveedor
 
-  .row
-    .list.common-text
-      a.button.button-primary(ui-sref='app.provider.new') Empezar
+    .row
+      .list.common-text
+        a.button.button-primary(ui-sref='app.provider.new') Empezar
