--- a/app/templates/prelogin/prelogin.jade
+++ b/app/templates/prelogin/prelogin.jade
@@ -2,17 +2,20 @@ ion-view(
   view-title="Login",
   hide-nav-bar="true"
 )
-  ion-content
+  ion-content.login-form
     .row
-      .moviggo-logo
-    .row.form-container
+      .moviggo-logo-1
+    .row.width-constraint
       .button.facebook-login(ng-click="preVm.loginWithFB()")
         span.fb-left-icon
         span.fb-copytext Continuar con facebook
-    .row.form-container
+    .row.width-constraint
       a.button.button-primary.button-block(ui-sref='register')
         span Registrarme usando mi email
-.bar.bar-footer.bar-light
-  .title ¿Ya tienes cuenta?&nbsp;
+
+.bar.bar-footer.bar-light.padded
+  .title
+    | ¿Ya tienes cuenta?&nbsp;
     a(ui-sref="login") Inicia sesión
-.bar.bar-footer.bar-footer-send-email
+
+.bar.bar-footer.bar-footer-yellow-stripe
