--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,6 +20,7 @@
 @import "applications/form";
 @import "map/map";
 @import "provider/new";
+@import "provider/detail";
 @import "overrides/scroll";
 @import "overrides/bar-header";
 @import "directives/back-button";
