Fix title view (#50)
* Add moviggo logo to header

* Fix name browser provider

* Add titles tab browser for actions show category and new provider

* Configure tab title browser for categories

--- a/app/templates/category/show.jade
+++ b/app/templates/category/show.jade
@@ -1,5 +1,5 @@
 ion-view(
-  view-title='{{::("menu.category"|translate)}}'
+  view-title="{{:: categoryVm.categoryName}}"
 )
   ion-nav-title
     .alt-logo
