--- a/app/templates/provider/new.jade
+++ b/app/templates/provider/new.jade
@@ -1,4 +1,8 @@
-ion-view
+ion-view(
+  view-title='{{::("actions.newProvider"|translate)}}'
+)
+  ion-nav-title
+    .alt-logo
   ion-content
     .new-provider-view
       .row
