--- a/app/templates/item/items.jade
+++ b/app/templates/item/items.jade
@@ -1,6 +1,8 @@
 ion-view(
   view-title='{{::("item.items"|translate)}}'
 )
+  ion-nav-title
+    .alt-logo
   ion-content.item-page
     .row
       .col.col-75.col-offset-5
