--- a/app/templates/products/index.jade
+++ b/app/templates/products/index.jade
@@ -1,6 +1,8 @@
 ion-view(
   view-title="{{::('menu.products'|translate)}}"
 )
+  ion-nav-title
+    .alt-logo
   ion-content
     h1 {{::("menu.products"|translate)}}
     
