prefer ionic icons (#54)
* prefer ionic icons

* use ionic-generic classes for forms

--- a/app/templates/login/login.jade
+++ b/app/templates/login/login.jade
@@ -6,34 +6,35 @@ ion-view(
     back-button
     .row
       .moviggo-logo-1
-    .row.width-constraint
+    .row
       form(ng-submit='loginVm.login()')
-        .list
-          label.item.item-input.with-icon
-            span.email-left-icon
+        .list.list-inset
+          label.item.item-input
+            i.icon.ion-email.placeholder-icon
             input(
               type='email',
               ng-model='loginVm.loginForm.email'
               required='required'
               placeholder='{{::("login.email"|translate)}}'
             )
-          label.item.item-input.with-icon
-            span.lock-left-icon
+          label.item.item-input
+            i.icon.ion.ion-android-lock.placeholder-icon
             input(
               type='password',
               ng-model='loginVm.loginForm.password',
               required='required',
               placeholder='{{::("login.password"|translate)}}'
             )
-        .button-actions
+        .list.list-inset.button-actions
           input(
             type='submit',
             value='{{::("login.login"|translate)}}'
           ).button.button-primary.button-block
-    .row.width-constraint
-      a.button.button-clear.button-link(ui-sref='send') {{::("login.forgotPassword"|translate)}}
-    .row.width-constraint
-      .button.facebook-login(ng-click="loginVm.loginWithFB()")
+          
+    .list.list-inset.top-narrow
+      a.button.button-block.button-clear.button-link(ui-sref='send') {{::("login.forgotPassword"|translate)}}
+      
+      .button.button-block.facebook-login(ng-click="loginVm.loginWithFB()")
         span.fb-left-icon
         span.fb-copytext {{::("login.continueWithFacebook"|translate)}}
 
