--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -21,8 +21,10 @@
 @import "map/map";
 @import "provider/new";
 @import "provider/detail";
+@import "overrides/lists";
 @import "overrides/scroll";
 @import "overrides/bar-header";
+@import "overrides/input-icons";
 @import "directives/back-button";
 @import "directives/show-error";
 @import "categories/index";
