Add category view (#52)

--- a/app/styles/categories/index.scss
+++ b/app/styles/categories/index.scss
@@ -21,8 +21,7 @@
     align-items: center;
     justify-content: center;
 
-    .name{
-      color: $white;
+    .title{
       text-transform: uppercase;
       font-family: Montserrat-Regular;
     }
