--- a/app/templates/category/show.jade
+++ b/app/templates/category/show.jade
@@ -3,12 +3,16 @@ ion-view(
 )
   ion-nav-title
     .alt-logo
-  ion-content(class="category-page")
+  ion-content(class="category-page",
+    style="background-image: url('{{categoryVm.category.imagen}}')"
+  )
+    .category-title {{categoryVm.category.titulo | uppercase}}
+    .category-description {{categoryVm.category.descripcion}}
     slick(settings="categoryVm.slickConfig")
-      .slick-container(ng-repeat="category in categoryVm.categories")
-        .slick-content(ui-sref='app.categories.provider({category_id: category.id, id: category.provider.id })')
-          .img(style="background-image: url('{{category.imagen}}')")
-          .nombre {{category.name}}
-          .horario {{category.horario}}
-          
-          
+      .slick-container(ng-repeat="provider in categoryVm.providers")
+        .slick-content
+          .provider-card
+            .img(style="background-image: url('{{provider.imagen}}')")
+            .provider-card-footer
+              .nombre {{provider.razon_social}}
+              .horario {{provider.horario}}
